# EDA_SQL_Helper

./: .gitignore  .gitignore.swo  CMakeLists.txt  README.md
data/: standard_cells.db
include/: CellData.hpp  SQLiteDB.hpp  VLLMClient.hpp  Visualizer.hpp
scripts/: extract_sky130.py  standard_cells_sky130_real.db
src/: SQLiteDB.cpp  VLLMClient.cpp  Visualizer.cpp  main.cpp
